--- a/index.html
+++ b/index.html
@@ -1,162 +1,7 @@
-<!-- <!DOCTYPE html> -->
-<!-- <html lang="en"> -->
-<!--   <head> -->
-<!-- <link rel="import" href="bower_components/iron-icons/iron-icons.html" > -->
-<!-- <link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html" > -->
-<!-- <link rel="import" href="bower_components/paper-drawer-panel/paper-drawer-panel.html" > -->
-<!-- <link rel="import" href="bower_components/paper-header-panel/paper-header-panel.html" > -->
-<!-- <link rel="import" href="bower_components/paper-ripple/paper-ripple.html" > -->
-<!-- <link rel="import" href="bower_components/paper-button/paper-button.html" > -->
-<!-- <link rel="import" href="bower_components/paper-toolbar/paper-toolbar.html" > -->
-<!-- <link rel="import" href="bower_components/polymer/polymer.html"> -->
-
-<!-- <style type="text/css"> -->
-<!--   /* make #my-button green with yellow text */ -->
-<!--   #my-button { -->
-<!--         background: green; -->
-<!--             color: yellow; -->
-<!--           } -->
-<!-- </style> -->
-<!--   </head> -->
-<!--     <body class="fullbleed layout vertical"> -->
-<!--       <paper-scroll-header-panel class="flex"> -->
-<!--       <paper-toolbar> -->
-<!--       <div>Hello World!</div> -->
-<!--       </paper-toolbar> -->
-<!--       </paper-scroll-header-panel> -->
-<!--     </body> -->
-<!-- </html> -->
-
-
-<!-- <!doctype html> -->
-<!-- <!-- -->
-<!-- @license -->
-<!-- Copyright (c) 2015 The Polymer Project Authors. All rights reserved. -->
-<!-- This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt -->
-<!-- The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt -->
-<!-- The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt -->
-<!-- Code distributed by Google as part of the polymer project is also -->
-<!-- subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt -->
-<!-- --> -->
-<!-- <html> -->
-<!-- <head> -->
-<!--   <title>paper-scroll-header-panel: demo6</title> -->
-
-<!--   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes"> -->
-<!--   <meta name="mobile-web-app-capable" content="yes"> -->
-<!--   <meta name="apple-mobile-web-app-capable" content="yes"> -->
-
-<!--   <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script> -->
-
-<!-- <link rel="import" href="bower_components/paper-header-panel/paper-header-panel.html" > -->
-<!-- <link rel="import" href="bower_components/paper-toolbar/paper-toolbar.html" > -->
-
-<!-- <link rel="import" href="bower_components/iron-icons/iron-icons.html" > -->
-
-<!-- <link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html" > -->
-
-<!-- <link rel="import" href="bower_components/paper-button/paper-button.html" > -->
-<!-- <link rel="import" href="bower_components/polymer/polymer.html"> -->
-
-<!--   <link rel="import" href="sample-content.html"> -->
-
-<!--   <link rel="stylesheet" href="bower_components/paper-styles/paper-styles.html"> -->
-
-<!--   <style is="custom-style"> -->
-
-<!--     paper-scroll-header-panel { -->
-<!--       position: absolute; -->
-<!--       top: 0; -->
-<!--       right: 0; -->
-<!--       bottom: 0; -->
-<!--       left: 0; -->
-<!--       background-color: var(--paper-grey-200, #eee); -->
-
-<!--       /* background for toolbar when it is at its full size */ -->
-<!--       --paper-scroll-header-panel-full-header: { -->
-<!--         background-image: url(bower_components/paper-scroll-header-panel/demo/images/bg2.jpg); -->
-<!--       }; -->
-
-<!--       /* background for toolbar when it is condensed */ -->
-<!--       --paper-scroll-header-panel-condensed-header: { -->
-<!--         background-image: url(bower_components/paper-scroll-header-panel/demo/images/bg3.jpg); -->
-<!--       }; -->
-<!--     } -->
-
-<!--     paper-toolbar.tall { -->
-<!--       /* custom toolbar height */ -->
-<!--       height: 256px; -->
-<!--       background-color: transparent; -->
-<!--     } -->
-
-<!--     paper-toolbar.tall .title { -->
-<!--       font-size: 40px; -->
-<!--       margin-left: 60px; -->
-
-<!--       -webkit-transform-origin: left center; -->
-<!--       transform-origin: left center; -->
-<!--     } -->
-
-<!--     .content { -->
-<!--       padding: 8px; -->
-<!--     } -->
-
-<!--   </style> -->
-
-<!-- </head> -->
-<!-- <body unresolved> -->
-
-<!--   <1!-- By default condensedHeaderHeight is 1/3 of the header's height.  Here -->
-<!--        we want to set the condensed header's height to be 64px. --1> -->
-<!--   <paper-scroll-header-panel condenses header-height="256" condensed-header-height="64"> -->
-
-<!--     <paper-toolbar class="tall"> -->
-
-<!--       <paper-icon-button icon="arrow-back"></paper-icon-button> -->
-<!--       <div class="flex"></div> -->
-<!--       <paper-icon-button icon="search"></paper-icon-button> -->
-<!--       <paper-icon-button icon="more-vert"></paper-icon-button> -->
-<!--       <div class="bottom title">Title</div> -->
-
-<!--     </paper-toolbar> -->
-
-<!--     <div class="content"> -->
-
-<!--       <sample-content size="100"></sample-content> -->
-
-<!--     </div> -->
-
-<!--   </paper-scroll-header-panel> -->
-
-<!--   <script> -->
-
-<!--     // custom transformation: scale header's title -->
-<!--     var title = document.querySelector('.title'); -->
-<!--     addEventListener('paper-header-transform', function(e) { -->
-<!--       var d = e.detail; -->
-<!--       var m = d.height - d.condensedHeight; -->
-<!--       var scale = Math.max(0.75, (m - d.y) / (m / 0.25)  + 0.75); -->
-
-<!--       Polymer.Base.transform('scale(' + scale + ') translateZ(0)', title); -->
-<!--     }); -->
-
-<!--   </script> -->
-
-<!-- </body> -->
-<!-- </html> -->
 <!doctype html>
-<!--
-@license
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
 <html>
 <head>
-  <title>paper-scroll-header-panel: demo6</title>
+  <title>Greg's Project Blog</title>
 
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <meta name="mobile-web-app-capable" content="yes">
@@ -176,7 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <link rel="import" href="bower_components/paper-toolbar/paper-toolbar.html">
   <link rel="import" href="bower_components/iron-icons/iron-icons.html">
   <link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html">
-  <link rel="import" href="sample-content.html">
+  <link rel="import" href="blog-content.html">
 
   <link rel="stylesheet" href="bower_components/paper-styles/demo.css">
 
@@ -239,9 +84,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </paper-toolbar>
 
     <div class="content">
-
-      <sample-content size="100"></sample-content>
-
+      <blog-content size="100"></blog-content>
     </div>
 
   </paper-scroll-header-panel>
