--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <link rel="import" href="bower_components/polymer/polymer.html">
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
+<link rel="import" href="bower_components/paper-drawer-panel/paper-drawer-panel.html" >
+
   <link rel="import" href="bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
   <link rel="import" href="bower_components/paper-toolbar/paper-toolbar.html">
   <link rel="import" href="bower_components/paper-material/paper-material.html">
@@ -55,7 +57,7 @@
 
       /* background for toolbar when it is condensed */
       --paper-scroll-header-panel-condensed-header: {
-        background-image: url(img/home-bg-dark.jpg);
+        background-color: var(--paper-orange-700);
       };
     }
 
@@ -84,45 +86,66 @@
 
   <!-- By default condensedHeaderHeight is 1/3 of the header's height.  Here
        we want to set the condensed header's height to be 64px. -->
-  <paper-scroll-header-panel condenses header-height="256" condensed-header-height="64">
+<paper-drawer-panel>
+  <paper-header-panel drawer>
+    <paper-toolbar style="background-color:#aaa">
+      <div class="bottom title" style="padding-top: 4px; padding-bottom: 4px; text-style:center">Project Index</div>
+    </paper-toolbar>
+    <div > Drawer content... </div>
+  </paper-header-panel>
+
+  <paper-header-panel main>
+
+  <paper-scroll-header-panel condenses keep-condensed-header header-height="256" condensed-header-height="64">
   
 
+    <!-- <paper-toolbar> -->
     <paper-toolbar class="tall">
 
       <!-- <paper-icon-button icon="arrow-back"></paper-icon-button> -->
       <div class="flex"></div>
       <!-- <paper-icon-button icon="search"></paper-icon-button> -->
       <paper-icon-button icon="more-vert"></paper-icon-button>
-      <div class="bottom title" style="padding-top: 4px; padding-bottom: 4px;">Selected Summaries</div>
+      <div class="bottom title" style="padding-top: 4px; padding-bottom: 4px;">Portfolio</div>
 
     </paper-toolbar>
 
   <iron-pages selected="0">
     <div class="content">
-      <blog-content-ee size="100" onclick="onPolymerClick()"></blog-content-ee>
-      <blog-content-fw size="100" onclick="onPolymerClick()"></blog-content-fw>
-      <blog-content-dn size="100" onclick="onPolymerClick()"></blog-content-dn>
-      <blog-content-ws size="100" onclick="onPolymerClick()"></blog-content-ws>
+      <blog-content-ee size="100" onclick="onSectionClick(1)"></blog-content-ee>
+      <blog-content-fw size="100" onclick="onSectionClick(2)"></blog-content-fw>
+      <blog-content-dn size="100" onclick="onSectionClick(3)"></blog-content-dn>
+      <blog-content-ws size="100" onclick="onSectionClick(1)"></blog-content-ws>
     </div>
-  <div onclick="onPolymerClick()">One</div>
-  <div onclick="onPolymerClick()">Two</div>
-  <div onclick="onPolymerClick()">Three</div>
+    <div class="content">
+      <blog-content-fw size="100" onclick="onSectionClick(2)"></blog-content-fw>
+      <blog-content-ee size="100" onclick="onSectionClick(1)"></blog-content-ee>
+      <blog-content-ws size="100" onclick="onSectionClick(2)"></blog-content-ws>
+      <blog-content-dn size="100" onclick="onSectionClick(1)"></blog-content-dn>
+    </div>
+  <div onclick="onSectionClick(0)">One</div>
+  <div onclick="onSectionClick(0)">Two</div>
+  <div onclick="onSectionClick(0)">Three</div>
+
   </iron-pages>
 
   </paper-scroll-header-panel>
+</paper-drawer-panel>
 
 
 
 
   <script>
-    function onPolymerClick() {
+    var onSectionClick = function(content_index) {
+      var delay = 300;
       var pages = document.querySelector('iron-pages');
-      setTimeout(function(){
-      pages.selectNext();
-        }, 300); 
+      if ( content_index == 0 ){
+        delay = 0;
       }
-//    document.addEventListener('click', function(e) {
- //     });
+      setTimeout(function(){
+      pages.select(content_index);
+        }, delay); 
+      }
 
     </script>
 
