--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <link rel="import" href="bower_components/neon-animation/neon-shared-element-animatable-behavior.html">
     <link rel="import" href="bower_components/iron-pages/iron-pages.html">
   <link rel="import" href="blog-content-ee.html">
+  <link rel="import" href="blog-content-android.html">
   <link rel="import" href="blog-content-fw.html">
   <link rel="import" href="blog-content-dn.html">
   <link rel="import" href="blog-content-ws.html">
@@ -113,6 +114,7 @@
   <iron-pages selected="0">
     <div class="content">
       <blog-content-ee size="100" onclick="onSectionClick(1)"></blog-content-ee>
+      <blog-content-android size="100" onclick="onSectionClick(1)"></blog-content-android>
       <blog-content-fw size="100" onclick="onSectionClick(2)"></blog-content-fw>
       <blog-content-dn size="100" onclick="onSectionClick(3)"></blog-content-dn>
       <blog-content-ws size="100" onclick="onSectionClick(1)"></blog-content-ws>
