updated design firmware and ws exp

--- a/blog-content-fw.html
+++ b/blog-content-fw.html
@@ -49,7 +49,7 @@
         post = "Firmware Exp."
         subpost = "Atmel, PIC, &amp; Interfaces"
         subsubpost = "Experience in programming PICs and Atmel chips, setting-fuses, selecting xtals, burning-bootloaders, using eeprom, shifting-bits-writing-registers, handling communication via i2c/spi/uart, and dealing with complications of incorporating hardware-interrupts."
-        subsubsubpost = "I am versed in both CLI (avr-gcc) and Arduino IDE (preferring vim as my external editor) for programming firmware onto Atmel Chips via FTDI cables, ISP headers, and conventional dual uC arduinos. Click for specific project links"
+        subsubsubpost = "I am versed in both CLI (avr-gcc) and Arduino IDE (preferring vim as my external editor) for programming firmware onto Atmel Chips via FTDI cables, ISP headers, and conventional dual uC arduinos. Click for specific project links."
 
           html +=
           '<div style="margin-top:8px;margin-bottom:8px;"><paper-material elevation="2"><div style="position: relative; padding: 18px; border-radius: 5px; background-color: #fff; color: #555;">' +
