--- a/blog-content-ws.html
+++ b/blog-content-ws.html
@@ -46,10 +46,10 @@
 
         category = "WS";
         circ_color = "#404";
-        post = "Electrical Designs";
-        subpost = "Part 1 - Back To Basics";
-        subsubpost = "In order to keep my my chops, I send in a new board for PCBA every 2 weeks with a different challenge.";
-        subsubsubpost = "Part 1 is recap, each of these projects is meant to be useful and low-complexity for focusing on facets of the EDA tool -- which is in this case Eagle.";
+        post = "Web Dev and Server Setup Exp.";
+        subpost = "Experience in LAMP, Python-based, and Javascript based stacks";
+        subsubpost = "I am an avid Hacker News follower, nad have your typical set of practical web-skills: HTML/CSS/Javascript, HTML5 canvas for basic web-games and interactive webapps, JQuery for effects, Three.js for WebGL based design, familiarity with templates (Google's Polymer for this site, Bootstrap, Foundation, and YUI), Node.js, Python, PHP/MySQL, and various cool technologies such as Firebase.js (real-time data binding) and Twilio (text and voice automation).";
+        subsubsubpost = "I try to be as efficient (time-wise) on these projects. Click on this card for a selection of projects.";
 
           html +=
           '<div style="margin-top:8px; margin-bottom: 8px"><paper-material elevation="2" animated="true"><div style="position: relative; padding: 18px; border-radius: 5px; background-color: #fff; color: #555;">' +
@@ -57,7 +57,7 @@
             '<div style="display: inline-block; height: 64px; width: 64px; border-radius: 50%; background: ' + circ_color + '; line-height: 64px; font-size: 30px; color: #DDD; text-align: center;">'+ category + '</div>' +
             '<div style="font-size: 22px; padding: 8px 0 16px; color: #888;">' + post + '</div>' +
             '<div style="font-size: 16px; padding-bottom: 8px;">' + subpost + '</div>' +
-            '<div style="font-size: 12px; padding-bottom: 3px;">' +  subsubpost + '</div>' +
+            '<div style="font-size: 12px; padding-bottom: 8px;">' +  subsubpost + '</div>' +
             '<div style="font-size: 12px;">' +  subsubsubpost + '</div>' + 
             '<paper-ripple></paper-ripple>' +
             '</div></paper-material>';
