--- a/blog-content-dn.html
+++ b/blog-content-dn.html
@@ -48,7 +48,8 @@
         circ_color = "#2AA";
         post = "Design Activities"
         subpost = "Selected Design Activities"
-        subsubpost = "In order to "
+        subsubpost = "While it's not what I typically do, I have produced logos, UI/UX based on principles of applied modern-algebra."
+        subsubsubpost = "Click for my portfolio which includes: responsive web-design, Android App Design principles, Three.js/HTML5 webapps, and Solidworks 3D Modelling."
 
           html +=
           '<div style="margin-top:8px;margin-bottom:8px;"><paper-material elevation="2"><div style="position: relative; padding: 18px; border-radius: 5px; background-color: #fff; color: #555;">' +
@@ -56,8 +57,8 @@
             '<div style="display: inline-block; height: 64px; width: 64px; border-radius: 50%; background: ' + circ_color + '; line-height: 64px; font-size: 30px; color: #DDD; text-align: center;">'+ category + '</div>' +
             '<div style="font-size: 22px; padding: 8px 0 16px; color: #888;">' + post + '</div>' +
             '<div style="font-size: 16px; padding-bottom: 8px;">' + subpost + '</div>' +
-            '<div style="font-size: 12px;">' + subsubpost + '</div>' +
-            '<div style="font-size: 12px;">' +  subsubpost + '</div>' +
+            '<div style="font-size: 12px; padding-bottom: 8px;">' + subsubpost + '</div>' +
+            '<div style="font-size: 12px; padding-bottom: 8px;">' +  subsubsubpost + '</div>' +
             '<paper-ripple></paper-ripple>' + 
             '</div></paper-material> </div>';
 
