added material design spec index with paper-ripples

--- a/android-portfolio-entry.html
+++ b/android-portfolio-entry.html
@@ -61,7 +61,7 @@
             '<div style="font-size: 16px; padding-bottom: 8px;">' + subpost + '</div>' +
             '<div style="font-size: 12px; padding-bottom: 3px;">' +  subsubpost + '</div>' +
             '<div style="font-size: 12px;">' +  subsubsubpost + '</div>' + 
-            '<paper-ripple></paper-ripple>' +
+            '<taper-ripple></paper-ripple>' +
             '</div></paper-material>';
 
           subpost="https://github.com/gskielian/Tap-for-BPM"
